--- a/style.css
+++ b/style.css
@@ -19,6 +19,22 @@ body{
     margin: 0 auto;
 
    }
+
+   .flex {
+    display: flex;
+   }
+
+   .btn-contato button{
+    padding: 10px 40px;
+    font-size: 18px;
+    font-weight: 600px;
+    background-color: plum;
+    border: 0;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: .2s;
+}
+
    /* Estilo Do Cabeçalho */
 
 header{
@@ -52,15 +68,45 @@ header nav ul li{
 
 }
 
-header .btn-contato button{
-    padding: 10px 40px;
-    font-size: 18px;
-    font-weight: 600px;
-    background-color: plum;
-    border: 0;
-    border-radius: 30px;
-    cursor: pointer;
+
+.btn-contato button:hover{
+    box-shadow: 0px 0px 8px rgb(193, 189, 209);
+    transform: scale(1.05);
 }
-header .btn-contato button:hover{
-    box-shadow: 0px 0px 8px rgba(221, 160, 221, 0.233);
+
+/* ESTILO DO TOPO DOSITE */
+
+section.topo-do-site{
+    padding: 40px 4%;
+}
+
+section.topo-do-site .flex{
+    align-items: center;
+    justify-content: center;
+    gap: 90px;
+}
+
+.topo-do-site h1{
+    color: #fff;
+    font-size: 42px;
+    line-height: 40px;
+}
+
+.topo-do-site .txt-topo-site h1 span{
+    color: plum;
+    font-size: 56px;
+}
+
+.topo-do-site .txt-topo-site p {
+    color: #fff;
+    margin: 40px 0;
+}
+
+@keyframes flutuar{
+    0%{
+        top: 0;
+    }
+    100%{
+        top: 30%;
+    }
 }
