--- a/style.css
+++ b/style.css
@@ -28,13 +28,23 @@ body{
     padding: 10px 40px;
     font-size: 18px;
     font-weight: 600px;
-    background-color: plum;
+    background-color: rgb(40, 204, 67);
     border: 0;
     border-radius: 30px;
     cursor: pointer;
     transition: .2s;
 }
 
+h2.titulo{
+    color: #fff;
+    font-size: 38px;
+    text-align: center
+}
+
+h2.titulo span{
+    color: rgb(40, 204, 67);
+
+}
    /* Estilo Do Cabeçalho */
 
 header{
@@ -70,7 +80,7 @@ header nav ul li{
 
 
 .btn-contato button:hover{
-    box-shadow: 0px 0px 8px rgb(193, 189, 209);
+    box-shadow: 0px 0px 8px rgb(189, 209, 189);
     transform: scale(1.05);
 }
 
@@ -93,7 +103,7 @@ section.topo-do-site .flex{
 }
 
 .topo-do-site .txt-topo-site h1 span{
-    color: plum;
+    color: rgb(40, 204, 67);
     font-size: 56px;
 }
 
@@ -102,11 +112,44 @@ section.topo-do-site .flex{
     margin: 40px 0;
 }
 
+.topo-do-site  .img-topo-site img{
+    position: relative;
+    animation: flutuar 2s ease-in-out infinite alternate;
+}
 @keyframes flutuar{
     0%{
         top: 0;
     }
     100%{
-        top: 30%;
+        top: 30px;
     }
+}
+
+/* ESTILOS DA HABILIDADES */
+
+section .habilidades{
+    padding: 40px 4%;
+}
+
+section.habilidades .flex{
+    gap: 60px;
+}
+
+.habilidades .habilidades-box{
+    color: #fff;
+    padding: 40px;
+    border-radius: 20px;
+    margin-top: 45px;
+    transition: .2s;
+}
+
+.habilidades .habilidades-box:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 20px #ffffff56;
+}
+
+.habilidades .habilidades-box i{
+    color: rgb(40, 204, 67);
+    font-size: 60px;
+    padding: 30px;
 }
